--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+BeautifulSoup==3.2.1
 Django==1.4.3
+Fabric==1.6.0
 Markdown==2.2.1
 South==0.7.6
 cmsplugin-markdown==0.1
@@ -6,6 +8,12 @@ django-classy-tags==0.4
 django-cms==2.3.5
 django-mptt==0.5.2
 django-sekizai==0.7
+django-tastypie==0.9.12
 html5lib==0.95
+mimeparse==0.1.3
+paramiko==1.10.0
 psycopg2==2.4.6
+pycrypto==2.6
+python-dateutil==2.1
+six==1.2.0
 wsgiref==0.1.2
