--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Fabric==1.6.0
 Markdown==2.2.1
 South==0.7.6
 cmsplugin-markdown==0.1
+dj-database-url==0.2.1
 django-classy-tags==0.4
 django-cms==2.3.5
 django-mptt==0.5.2
