--- a/formidabel/requirements.txt
+++ b/formidabel/requirements.txt
@@ -2,14 +2,19 @@ BeautifulSoup==3.2.1
 Django==1.4.3
 Fabric==1.6.0
 Markdown==2.2.1
+Pillow==2.0.0
 South==0.7.6
+cmsplugin-filer==0.9.5
 cmsplugin-markdown==0.1
 dj-database-url==0.2.1
 django-classy-tags==0.4
 django-cms==2.3.5
+django-filer==0.9.4
 django-mptt==0.5.2
+django-polymorphic==0.4.2
 django-sekizai==0.7
 django-tastypie==0.9.12
+easy-thumbnails==1.2
 html5lib==0.95
 mimeparse==0.1.3
 paramiko==1.10.0
